# Object-Oriented-Programming-2019

./: README.md
lab01/: CMakeLists.txt  Kolo.cpp  Kolo.h  Ksztalt.h  Kwadrat.cpp  Kwadrat.h  Trojkat.cpp  Trojkat.h
lab02/: CMakeLists.txt
lab02/include/: AccumulatingVisitor.h  Data.h  ElData.h  PrintingVisitor.h  Visitor.h
lab02/src/: AccumulatingVisitor.cpp  ElData.cpp  PrintingVisitor.cpp
lab03/: CMakeLists.txt  printtest.cpp
lab03/include/: AttColor.h  AttFormat.h  MyLine.h  MyPrinter.h  MyText.h  Printable.h
lab03/src/: AttColor.cpp  AttFormat.cpp  MyLine.cpp  MyPrinter.cpp  MyText.cpp
lab04/: CMakeLists.txt  main.cpp
lab04/include/: Anfibia.h  Pojazdy.h  PojazdyLadowe.h  PojazdyPlywajace.h  PredkoscMaksymalna.h
lab04/src/: Anfibia.cpp  Pojazdy.cpp  PojazdyLadowe.cpp  PojazdyPlywajace.cpp  PredkoscMaksymalna.cpp
lab05/: CMakeLists.txt
lab05/include/: Main.h  Number.h  OutOfRange.h
lab05/src/: Number.cpp  OutOfRange.cpp
lab06/: CMakeLists.txt
lab06/include/: Factory.h  NicePrinter.h  main.h
lab06/src/: NicePrinter.cpp
lab07/: main.cpp
lab07/include/: DynArray.h  main.hpp
